@@ -7,8 +7,8 @@ install:
 	cp ispcp_daemon $(ROOT_CONF)/rc.d/ispcp_daemon.sh
 	cp ispcp_network $(ROOT_CONF)/rc.d/ispcp_network.sh
 
-	chown root:wheel $(ROOT_CONF)/ispcp_network.sh $(ROOT_CONF)/rc.d/ispcp_daemon.sh
-	chmod 0755 $(ROOT_CONF)/ispcp_network.sh $(ROOT_CONF)/rc.d/ispcp_daemon.sh
+	chown root:wheel $(ROOT_CONF)/rc.d/ispcp_network.sh $(ROOT_CONF)/rc.d/ispcp_daemon.sh
+	chmod 0755 $(ROOT_CONF)/rc.d/ispcp_network.sh $(ROOT_CONF)/rc.d/ispcp_daemon.sh
 
 uninstall:
 
