@@ -16,7 +16,7 @@ VersionH = 1.0 Priamos
 
 DEFAULT_ADMIN_ADDRESS =
 
-SERVER_HOSTNAME = debian
+SERVER_HOSTNAME = freebsd
 
 BASE_SERVER_IP = 127.0.0.1
 
@@ -206,9 +206,9 @@ APACHE_SUEXEC_MIN_GID = 2000
 
 APACHE_SUEXEC_MIN_UID = 2000
 
-APACHE_USER = www-data
+APACHE_USER = www
 
-APACHE_GROUP = www-data
+APACHE_GROUP = www
 
 #
 # Postfix MTA Data
